--- a/final_project_react/package.json
+++ b/final_project_react/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react-router": "^5.1.18",
     "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
+    "react": "^17.0.0",
     "react-bootstrap": "^2.0.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^0.9.5",
     "semantic-ui-css": "^2.4.1",
